--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -24,10 +21,38 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  min-height: 100vh;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.content {
+  width: 50%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+  margin-bottom: 1rem;
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.button {
+  padding: 0.5rem;
+  background: transparent;
+  border: 1px solid rgb(var(--foreground-rgb));
+  color: rgb(var(--foreground-rgb));
+  cursor: pointer;
+}
+
+.button:hover {
+  background: rgba(var(--foreground-rgb), 0.1);
 }
